hugo: edit post url

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -94,7 +94,7 @@ params:
     hiddenInSingle: true # hide on single page
 
   editPost:
-    URL: "https://github.com/wickes1.github.io/content"
+    URL: "https://github.com/wickes1/wickes1.github.io/blob/main/content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
